# voxelproxy

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  dev.mjs  docker-compose.yml  index.html  iptables-route.sh  package.json  tauri.conf.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: release.yml  rust.yml
capabilities/: default.json
dev/: index.html
docs/: index.html
minecraft_protocol/src/: lib.rs  packet_builder.rs  packet_reader.rs
minecraft_protocol/src/types/: num.rs
src/: App.tsx  auto_update.rs  bindings.ts  commands.rs  controller.rs  hotspot_redirect.rs  keybind.rs  lib.rs  local_ip.rs  logger.rs  main.rs  main.ts  main.tsx  packets.rs  proxy.rs  resolver.rs  session.rs  state.ts  tauri.ts  telemetry.rs  types.ts  updater.rs
src-tauri/: Cargo.toml  build.rs  common.wxs  tauri.conf.json
src-tauri/assets/: license.rtf
src-tauri/capabilities/: default.json
src-tauri/proto/: worker.proto
src-tauri/src/: app_state.rs  changelog.rs  commands.rs  config.rs  controller.rs  events.rs  hotspot_redirect.rs  lib.rs  local_ip.rs  logger.rs  main.rs  packets.rs  prefs.rs  proxy.rs  resolver.rs  session.rs  telemetry.rs  updater.rs
src-tauri/src/protocols/: mod.rs
src-tauri/src/protocols/v1_16_5/: mod.rs  packets.rs
src-tauri/src/protocols/v1_20_1/: mod.rs  packets.rs
src-tauri/src/protocols/v1_21_11/: mod.rs  packets.rs
src-tauri/src/protocols/v1_21_4/: mod.rs  packets.rs
src-tauri/src/protocols/v1_21_8/: mod.rs  packets.rs
src/components/: ActiveSession.tsx  AdminRequiredModal.tsx  ChangelogModal.tsx  ClientCard.ts  ClientCard.tsx  ConnectInstruction.ts  ConnectInstruction.tsx  DeveloperMessageModal.tsx  Icons.tsx  LogPanel.ts  LogPanel.tsx  ManualWarningModal.tsx  TitleBar.ts  TitleBar.tsx
src/hooks/: useAppState.ts  useTauriListeners.ts
src/packets/: mod.rs  packets.rs
src/protocols/: mod.rs
src/protocols/v1_16_5/: mod.rs  packets.rs
src/protocols/v1_20_1/: mod.rs  packets.rs
src/protocols/v1_21_4/: mod.rs  packets.rs
src/styles/: base.css  changelog.css  components.css  index.css  layout.css  log.css  tokens.css
src/views/: IdleView.ts  IdleView.tsx  RunningView.ts  RunningView.tsx
telemetry/: Cargo.toml  README.md
telemetry/src/: db.rs  handlers.rs  main.rs  models.rs  telegram.rs  utils.rs
ui/: app.js  index.html  style.css
