[package]
name = "voxelproxy"
version = "3.1.5"
edition = "2024"
authors = ["kauri-off <https://github.com/kauri-off>"]
description = "Бесплатный аналог takker.ru"
repository = "https://github.com/kauri-off/voxelproxy"
homepage = "https://github.com/kauri-off/voxelproxy"
readme = "README.md"
license = "GPL-3.0-only"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1.0.149"
trust-dns-resolver = "0.23.2"
dialoguer = "0.12.0"
reqwest = { version = "0.13.2", features = ["json"] }
anyhow = "1.0.102"
mc_protocol = { version = "2.0.0", features = ["async", "compression"], default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Networking_WinSock", 
    "Win32_NetworkManagement_IpHelper", 
    "Win32_NetworkManagement_Ndis",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console"
] }

[target.'cfg(not(windows))'.dependencies]
get_if_addrs = "0.5.3"
