[package]
name = "voxelproxy"
version = "6.2.8"
edition = "2024"
authors = ["kauri-off <https://github.com/kauri-off>"]
description = "Бесплатный аналог takker.ru"
repository = "https://github.com/kauri-off/voxelproxy"
homepage = "https://github.com/kauri-off/voxelproxy"
readme = "../README.md"
license = "GPL-3.0-only"

[dependencies]
tauri = { version = "2.10.3", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
serde_json = "1.0.149"
trust-dns-resolver = "0.23.2"
reqwest = { version = "0.13.2", features = ["json"] }
anyhow = "1.0.102"
mc_protocol = "2.1.1"
enum_dispatch = "0.3.13"
open = "5.3.4"
uuid = { version = "1.23.1", features = ["v4"] }
tauri-specta = { version = "2.0.0-rc.24", features = ["derive", "typescript"] }
specta-typescript = "0.0.11"
specta = { version = "2.0.0-rc.24", features = ["derive"] }
pulldown-cmark = { version = "0.13.3", default-features = false, features = ["html"] }
semver = "1.0.28"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Security",
    "Win32_System_Threading",
] }
windivert = "0.6.0"
etherparse = "0.20.1"
winreg = "0.56"

[target.'cfg(not(windows))'.dependencies]
get_if_addrs = "0.5.3"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
