[package]
name = "voxelproxy"
version = "6.3.11"
edition = "2024"
authors = ["kauri-off <https://github.com/kauri-off>"]
description = "Бесплатный аналог takker.ru"
repository = "https://github.com/kauri-off/voxelproxy"
homepage = "https://github.com/kauri-off/voxelproxy"
readme = "../README.md"
license = "GPL-3.0-only"

[dependencies]
tauri = { version = "2.11.2", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
serde_json = "1.0.150"
trust-dns-resolver = "0.23.2"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
anyhow = "1.0.102"
mc_protocol = "2.2.0"
enum_dispatch = "0.3.13"
open = "5.3.5"
uuid = { version = "1.23.3", features = ["v4"] }
specta-typescript = "0.0.12"
pulldown-cmark = { version = "0.13.4", default-features = false, features = ["html"] }
semver = "1.0.28"
specta = { version = "2.0.0-rc.24", features = ["derive"] }
tauri-specta = { version = "2.0.0-rc.24", features = ["derive", "typescript"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
windivert = "0.6.0"
etherparse = "0.20.1"
winreg = "0.56"

[target.'cfg(not(windows))'.dependencies]
get_if_addrs = "0.5.3"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
