[package]
name    = "telemetry"
version = "0.1.0"
edition = "2021"

[features]
default = []
telegram = ["dep:reqwest"]

[dependencies]
axum = "0.8.8"
tokio = { version = "1.51.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "chrono"] }
tower-http = { version = "0.6.8", features = ["trace"] }

reqwest = { version = "0.13.2", features = ["json"], optional = true }